Updated Operators